@@ -5,6 +5,7 @@
 #include <gdk-pixbuf/gdk-pixbuf.h>
 #include <gdk/gdktypes.h>
 #include <gio/gicon.h>
+#include <gtk/gtkstock.h>
 
 G_BEGIN_DECLS
 
@@ -75,6 +76,7 @@ float nautilus_get_relative_icon_size_for_zoom_level (NautilusZoomLevel  zoom_le
 guint nautilus_icon_get_larger_icon_size             (guint              size);
 guint nautilus_icon_get_smaller_icon_size            (guint              size);
 
+gint  nautilus_get_icon_size_for_stock_size          (GtkIconSize        size);
 char *nautilus_icon_get_emblem_icon_by_name          (const char        *emblem_name);
 guint nautilus_icon_get_emblem_size_for_icon_size    (guint              size);
 
